--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
-			<h1 class="editable">Make a new friend today</h1>
-			<p class="subtext editable">Frisco helps you find new friends with common interests. Search for a new Tennis partner, find a baking side-kick or befriend a new drinking buddy.</p>
+			<h1 class="editable">Technology for Social Innovation</h1>
+			<p class="subtext editable">Code for YOKOHAMAは仲間とともに技術を磨き、学んだスキルを地域の課題解決に役立てていく活動です。横浜から価値あるソリューションを世界へ。あなたもこの活動に参加しませんか？</p>
 			<div class="cta button alt"><a href="#">Join Now</a></div>
 		</div>
 	</div>
