メニューを調整

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 		<div class="hero-text-container">
 			<h1 class="editable">Technology for Social Innovation</h1>
 			<p class="subtext editable">Code for YOKOHAMAは仲間とともに技術を磨き、学んだスキルを地域の課題解決に役立てていく活動です。横浜から価値あるソリューションを世界へ。あなたもこの活動に参加しませんか？</p>
-			<div class="cta button alt"><a href="#">Join Now</a></div>
+			<div class="cta button alt"><a href="https://join.slack.com/t/code4yokohama/shared_invite/zt-e63peaf8-AIxGiecu5IgR2DHAiv~c~g">Join Now</a></div>
 		</div>
 	</div>
 	<div class="learn-more"><a href="#learn-more">Learn more <span class="arrow">&#x25BC;</span></a></div>
