--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 			{% for person in site.staff_members %}
 				<li>
 					<div class="square-image" style="background-image: url({% include relative-src.html src=person.image_path %})"></div>
-					<div class="name"><a target="_blank" href="https://twitter.com/{{ person.twitter_username }}">{{ person.name }}</a></div>
+					<div class="name"><a target="_blank" href="{{ person.twitter_url }}">{{ person.name }}</a></div>
 					<div class="position">{{ person.position }}</div>
 				</li>
 			{% endfor %}
