cssの細かいとこ調整色とか

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 title: About
 description: We've built an amazing team of developers, marketers, designers and sales people.
-image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
+image: /images/bgimages/bg002.jpg
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
