--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ map:
   longitude: 170.5027976
   address: "1 George Street, Dunedin, New Zealand"
   zoom: 13
-image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
+image: /images/bgimages/bg004.jpg
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
