--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Home
 description: The latest app to help you find new friends with common interests.
-image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
+image: /images/bgimages/bg003.jpg
 bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
 
