--- a/projects/index.html
+++ b/projects/index.html
@@ -18,7 +18,8 @@ image: /images/bgimages/bg004.jpg
 		<p class="editor-link"><a href="cloudcannon:collections/_projects" class="btn"><strong>&#9998;</strong> Manage Projects</a></p>
 		<ul class="projects">
 			{% for project in site.projects %}
-				<li><a href="{% include relative-src.html src=project.url %}">{{ project.title }}</a></li>
+				<li><a href="{% include relative-src.html src=project.url %}">
+					<div class="card">{{ project.title }}</div></a></li>
 			{% endfor %}
 		</ul>
 	</div>
