トップページの体裁をなんとなく整えた

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info" id="learn-more">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Introduce yourself</h2>
-				<p class="editable">Making news friends in the adult world is hard. Frisco is the perfect filter matching you the most interesting people in your area.</p>
+				<h2 class="editable">URBAN MANAGEMENT × ICT</h2>
+				<p class="editable">都市経営にICTを活用する。<br />デジタルツインやデータ分析可視化技術を駆使して横浜市の地域課題を見える化することで、より身近な問題としての認識を持ち、対策を議論しています。<br />ICT政策に対する提言をとりまとめて公開する活動もしています。</p>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="/images/toppage/vr.png" alt="建築前の市庁舎をVRで再現" />
 			</div>
 		</div>
 	</section>
@@ -32,11 +32,12 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Pick your interests</h2>
-				<p class="editable">The more you tell Frisco the better it gets to know you. Frisco matches you with people who share similar interests with you.</p>
+				<h2 class="editable">YOKOHAMA to Go</h2>
+				<p class="editable">コロナ禍において、ICTをどう役立てるか。<br />コロナ禍で地域の飲食店が苦境に立たされる中、商店会、横浜市経済局、市会議員との連携によってテイクアウト＆デリバリー情報サイト「YOKOHAMA to Go」を開発しました。</p>
+				<div class="cta button alt"><a href="./projects/YokohamaToGo/">プロジェクト詳細</a></div>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="/images/toppage/yokohama_to_go.png" alt="横浜市の飲食店のテイクアウト＆デリバリー情報サイトを開発" />
 			</div>
 		</div>
 	</section>
@@ -44,11 +45,11 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="info">
 		<div class="container flex">
 			<div class="text">
-				<h2 class="editable">Swipe and go</h2>
-				<p class="editable">Frisco shows you cards with people who might be a good match for friendship. Swipe left to move to the next card or right to start talking.</p>
+				<h2 class="editable">LEARN and SHARE</h2>
+				<p class="editable">ICTに関する知識をシェアする。<br />現代社会において、ICTは技術者だけのものではありません。各種フレームワークやライブラリー、GitHubなどの各種技術の勉強会を開催。横浜市職員有志グループと合同でICT相談会も開催しています。</p>
 			</div>
 			<div class="image">
-				<img class="editable" src="http://placehold.it/650x1300" alt="Screenshot" />
+				<img class="editable" src="/images/toppage/learn.png" alt="各種ICT勉強会を開催" />
 			</div>
 		</div>
 	</section>
@@ -56,9 +57,9 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	<section class="hero" style="background-image: url({% include relative-src.html src=page.bottom_image %})">
 		<div class="inner-hero text-container">
 			<div class="hero-text-container">
-				<h2 class="editable">Find your buddy today</h2>
-				<p class="subtext editable">It's free, fun and an exciting way to meet new people.</p>
-				<div class="cta button alt"><a href="#">Join Now</a></div>
+				<h2 class="editable">FIND YOUR INTERESTS AND DIVE INTO THE PROJECT</h2>
+				<p class="subtext editable">Code for YOKOAHAMではいくつものプロジェクトが同時進行しています。興味のある活動を見つけたら、遠慮無く参加してください。<br />新たなプロジェクトの提案も歓迎しています！</p>
+				<div class="cta button alt"><a href="./projects/">プロジェクト一覧</a></div>
 			</div>
 		</div>
 	</section>
