aboutページの文言追加等

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 			<div class="text">
 				<h2 class="editable">URBAN MANAGEMENT × ICT</h2>
 				<p class="editable">都市経営にICTを活用する。<br />デジタルツインやデータ分析可視化技術を駆使して横浜市の地域課題を見える化することで、より身近な問題としての認識を持ち、対策を議論しています。<br />ICT政策に対する提言をとりまとめて公開する活動もしています。</p>
+				<div class="button dp-inlineblock"><a href="./projects/YokohamaToGo/">技術駆動都市ヨコハマ2030</a></div>
+				<div class="button dp-inlineblock"><a href="./projects/YokohamaToGo/">市役所新庁舎VR</a></div>
 			</div>
 			<div class="image">
 				<img class="editable" src="/images/toppage/vr.png" alt="建築前の市庁舎をVRで再現" />
@@ -33,8 +35,8 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 		<div class="container flex">
 			<div class="text">
 				<h2 class="editable">YOKOHAMA to Go</h2>
-				<p class="editable">コロナ禍において、ICTをどう役立てるか。<br />コロナ禍で地域の飲食店が苦境に立たされる中、商店会、横浜市経済局、市会議員との連携によってテイクアウト＆デリバリー情報サイト「YOKOHAMA to Go」を開発しました。</p>
-				<div class="cta button alt"><a href="./projects/YokohamaToGo/">プロジェクト詳細</a></div>
+				<p class="editable">コロナ禍において、地域にICTをどう役立てるか。<br />地域の飲食店が苦境に立たされる中、商店会、横浜市経済局、市会議員との連携によってテイクアウト＆デリバリー情報サイト「YOKOHAMA to Go」を開発しました。</p>
+				<div class="button"><a href="./projects/YokohamaToGo/">YOKOHAMA to GO</a></div>
 			</div>
 			<div class="image">
 				<img class="editable" src="/images/toppage/yokohama_to_go.png" alt="横浜市の飲食店のテイクアウト＆デリバリー情報サイトを開発" />
@@ -46,7 +48,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 		<div class="container flex">
 			<div class="text">
 				<h2 class="editable">LEARN and SHARE</h2>
-				<p class="editable">ICTに関する知識をシェアする。<br />現代社会において、ICTは技術者だけのものではありません。各種フレームワークやライブラリー、GitHubなどの各種技術の勉強会を開催。横浜市職員有志グループと合同でICT相談会も開催しています。</p>
+				<p class="editable">ICTに関する知識をシェアする。<br />現代社会において、ICTは技術者だけのものではありません。各種フレームワークやライブラリー、GitHubなどの勉強会を開催。横浜市職員有志グループと合同でICT相談会も開催しています。</p>
 			</div>
 			<div class="image">
 				<img class="editable" src="/images/toppage/learn.png" alt="各種ICT勉強会を開催" />
