里山ガーデンコンテストのプロジェクトページ作成した

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 ---
 title: Home
 description: The latest app to help you find new friends with common interests.
-image: /images/bgimages/bg003.jpg
+image: /images/bgimages/bg004.jpg
 bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
+			<div class="main_logo" style="text-align: center; margin-bottom:50px;">
+				<img src="./images/logo/main_logo.svg" width="160px" />
+			</div>
 			<h1 class="editable">Technology for Social Innovation</h1>
 			<p class="subtext editable">Code for YOKOHAMAは仲間とともに技術を磨き、学んだスキルを地域の課題解決に役立てていく活動です。横浜から価値あるソリューションを世界へ。あなたもこの活動に参加しませんか？</p>
 			<div class="cta button alt"><a href="https://join.slack.com/t/code4yokohama/shared_invite/zt-e63peaf8-AIxGiecu5IgR2DHAiv~c~g">Join Now</a></div>
