トップページからプロジェクトページへのリンクの修正など

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 title: Home
 description: The latest app to help you find new friends with common interests.
 image: /images/bgimages/bg004.jpg
-bottom_image: https://unsplash.it/2000/1322?a=.png
+bottom_image: /images/bgimages/bg003.jpg
 ---
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
@@ -25,8 +25,8 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 			<div class="text">
 				<h2 class="editable">URBAN MANAGEMENT × ICT</h2>
 				<p class="editable">都市経営にICTを活用する。<br />デジタルツインやデータ分析可視化技術を駆使して横浜市の地域課題を見える化することで、より身近な問題としての認識を持ち、対策を議論しています。<br />ICT政策に対する提言をとりまとめて公開する活動もしています。</p>
-				<div class="button dp-inlineblock"><a href="./projects/YokohamaToGo/">技術駆動都市ヨコハマ2030</a></div>
-				<div class="button dp-inlineblock"><a href="./projects/YokohamaToGo/">市役所新庁舎VR</a></div>
+				<div class="button dp-inlineblock"><a href="./projects/ICTproposal/">技術駆動都市ヨコハマ2030</a></div>
+				<div class="button dp-inlineblock"><a href="./projects/NewCityhallVR/">市役所新庁舎VR</a></div>
 			</div>
 			<div class="image">
 				<img class="editable" src="/images/toppage/vr.png" alt="建築前の市庁舎をVRで再現" />
