MINATO MIRAI 21 Activation Program ページを追加した

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ bottom_image: /images/bgimages/bg003.jpg
 			<div class="text">
 				<h2 class="editable">YOKOHAMA to Go</h2>
 				<p class="editable">コロナ禍において、地域にICTをどう役立てるか。<br />地域の飲食店が苦境に立たされる中、商店会、横浜市経済局、市会議員との連携によってテイクアウト＆デリバリー情報サイト「YOKOHAMA to Go」を開発しました。</p>
-				<div class="button"><a href="./projects/YokohamaToGo/">YOKOHAMA to GO</a></div>
+				<div class="button dp-inlineblock"><a href="./projects/YokohamaToGo/">YOKOHAMA to GO</a></div>
 			</div>
 			<div class="image">
 				<img class="editable" src="/images/toppage/yokohama_to_go.png" alt="横浜市の飲食店のテイクアウト＆デリバリー情報サイトを開発" />
