Code for YOKOHAMAへの参加ルールの追加

--- a/about.html
+++ b/about.html
@@ -15,26 +15,89 @@ image: /images/bgimages/bg002.jpg
 
 <section class="pad">
 	<div class="container">
-		<h2>est. Feb, 2015</h2>
+		<h2>Code for YOKOHAMAとは</h2>
 		<div>
-			<p>Code for YOKOHAMA は横浜を拠点に活動するシビックテック団体です。シビックテックとは、ITスキルを備えた市民による社会貢献活動の総称です。コアメンバーにはIT企業の経営者、エンジニア、コンサルタント、学生等が所属しており、2015年2月の発足以来、勉強会やイベントの企画実施、横浜市や他団体との連携事業、横浜市へのIT施策の提言やアドバイスなどの活動を展開しています。<br />Code for YOKOHAMAでは地域の役に立つ事案であれば、デジタル技術を活用に関する相談を常時受け付けています。</p>
+			<p>Code for YOKOHAMA は横浜を拠点に活動するシビックテック団体です。
+				シビックテックとは、市民によるテクノロジーを活用した社会貢献活動の総称です。
+				コアメンバーにはIT企業の経営者、エンジニア、コンサルタント、学生等が所属しており、
+				2015年2月の発足以来、勉強会やイベントの企画実施、横浜市や他団体との連携事業、
+				横浜市へのIT施策の提言やアドバイスなどの活動を展開しています。
+				<br />
+				Code for YOKOHAMAでは、地域の役に立つ内容であれば幅広い分野で
+				デジタル技術の活用に関する相談を受け付けております。
+			</p>
 		</div>
 
-		<h2 style="margin-top:2em;">Join us!</h2>
+		<h2 style="margin-top:2em;">初めて参加される方へ</h2>
 		<div>
-			<h3>定例会に参加しよう！</h3>
-			<p>定例会では各プロジェクトの進捗報告やゲストによるトーク勉強会など、月一度の頻度で開催しています。最近はオンライン開催が定着しました。</p>
+			<h3>Slackに参加しよう！</h3>
+			<p>Code for YOKOHAMAの主なコミュニケーションツールはSlackです。まずは、Slackに参加してみましょう。
+				<br />プロジェクトごとに専用のチャンネルがあります。
+			</p>
+
+      <div class="button" style="margin-bottom:4em;"><a href="https://join.slack.com/t/code4yokohama/shared_invite/zt-e63peaf8-AIxGiecu5IgR2DHAiv~c~g">Slackに参加する</a></div>
+
+		
+			<h3>イベントに参加しよう！</h3>
+			<p>Code for YOKOHAMAでは月に1度の定例会や、特定のテーマについて深掘りしてディスカッションするための分科会、
+				新しい技術について学ぶ勉強会などを開催しています。
+				<br />イベントの予定は主にSlackでお知らせしています。
+				<br />最近はオンライン開催がメインとなっていますので、どなたもお気軽にご参加ください。
+			</p>
 
 			<h3>プロジェクトに参加しよう！</h3>
-			<p>Code for YOKOAHAMではいくつものプロジェクトが同時進行しています。興味のある活動を見つけたら、遠慮無く参加してください。<br />新たなプロジェクトの提案も歓迎しています！</p>
+			<p>Code for YOKOAHAMAではメンバーによる提案や外部からのご依頼を受け、複数のプロジェクトが同時進行しています。
+				<br />興味のある活動を見つけたら、ぜひ参加してみてください。
+				<br />新たなプロジェクトのご提案も歓迎いたします！
+			</p>
 			<div class="button" style="margin-bottom:4em;"><a href="./projects/">プロジェクト一覧</a></div>
-
-			<h3>Slackに参加しよう！</h3>
-			<p>Code for YOKOHAMAの主なコミュニケーションツールはSlackです。まずは、Slackに参加してみましょう。<br />プロジェクトごとに専用のチャンネルがあります。</p>
 		</div>
 
-		<div class="button" style="margin-bottom:4em;"><a href="https://join.slack.com/t/code4yokohama/shared_invite/zt-e63peaf8-AIxGiecu5IgR2DHAiv~c~g">Slackに参加する</a></div>
+		<h2 style="margin-top:2em;">参加のステップ</h2>
+		<p>Code for YOKOHAMAではさまざまな参加のスタイルを用意しています。
+			<br />気が向いた時にイベントのみ参加することもできますし、興味のある分科会・プロジェクトや運営に深く関わることもできます。
+			<br />メンバー同士の円滑なコミュニケーションと活動しやすい場づくりのために、以下のメンバー区分を設けています
+		</p>
 
+		<h3>エントリーメンバー</h3>
+			<p>YOKOHAMAのコミュニティにご参加頂いた方は、まずエントリーメンバーとなります。
+				<br />以下の要件のいずれかをクリアすると、エントリーメンバーになることができます。</p>
+			<ul>
+				<li> イベントへの参加（Code for YOKOHAMAが主催する定例会、分科会、勉強会など）</li>
+				<li> Slackへの参加</li>
+			</ul>
+		
+		<h3>アクティブメンバー</h3>
+		<p>より活動に深く関わって頂ける方は、アクティブメンバーとなります。
+			<br />エントリーメンバーの要件に加え、以下の要件の全てをクリアすると、アクティブメンバーになることができます。</p>
+		<ul>
+			<li> 分科会またはプロジェクトのSlackチャンネルへの参加</li>
+			<li> 分科会またはプロジェクトのMTGへの参加</li>
+		</ul>
+		<h4>特典</h4>
+		<ul>
+			<li> Code for YOKOHAMAの公式Webサイトにメンバーとして名前を掲載することができます。</li>
+		</ul>
+
+		<h3>コアメンバー</h3>
+		<p>コアメンバーは、Code for YOKOHAMAの運営に関与することができるメンバーです。
+			<br />アクティブメンバーの中から、以下のいずれかの方法で承認されると、コアメンバーとなります。</p>
+		<ol>
+    		<li>代表がコアメンバーを推薦</li>
+			<li>コアメンバーがアクティブメンバーをコアメンバーとして推薦</li>
+		</ol>
+		<p>毎年度初回のコアメンバーMTGで継続の意思を確認します。</p>
+		<h4>特典</h4>
+		<ul>
+			<li>コアメンバーMTG（C4Yの運営の意思決定の場）に参加することができます</li>
+			<li>新規分科会及び新規プロジェクトを設置することができます</li>
+			<li>CxO: チーフ・{自分の得意なもの}・オフィサーを名乗ることができます（※任意）</li>
+
+		<h3>用語定義</h3>
+		<p>分科会：特定のテーマに沿ってディスカッションする集まり
+			<br />プロジェクト：メンバーによる提案で立ち上げたり、外部からの依頼を受けてスタートする形で、具体的に手を動かして進めるプロジェクト
+		</p>
+		
 		<h2 style="margin-top:2em;">Members</h2>
 		<p class="editor-link"><a href="cloudcannon:collections/_staff_members" class="btn"><strong>&#9998;</strong> Manage Staff Members</a></p>
 		<ul class="staff">
