aboutページのテキスト微修正

--- a/about.html
+++ b/about.html
@@ -56,9 +56,9 @@ image: /images/bgimages/bg002.jpg
 		<h2 style="margin-top:2em;">参加のステップ</h2>
 		<p>Code for YOKOHAMAではさまざまな参加のスタイルを用意しています。
 			<br />気が向いた時にイベントのみ参加することもできますし、興味のある分科会・プロジェクトや運営に深く関わることもできます。
-			<br />メンバー同士の円滑なコミュニケーションと活動しやすい場づくりのために、以下のメンバー区分を設けています
+			<br />メンバー同士の円滑なコミュニケーションと活動しやすい場づくりのために、以下の3つのメンバー区分を設けています
 		</p>
-
+		<hr>
 		<h3>エントリーメンバー</h3>
 			<p>YOKOHAMAのコミュニティにご参加頂いた方は、まずエントリーメンバーとなります。
 				<br />以下の要件のいずれかをクリアすると、エントリーメンバーになることができます。</p>
@@ -66,7 +66,7 @@ image: /images/bgimages/bg002.jpg
 				<li> イベントへの参加（Code for YOKOHAMAが主催する定例会、分科会、勉強会など）</li>
 				<li> Slackへの参加</li>
 			</ul>
-		
+		<hr>
 		<h3>アクティブメンバー</h3>
 		<p>より活動に深く関わって頂ける方は、アクティブメンバーとなります。
 			<br />エントリーメンバーの要件に加え、以下の要件の全てをクリアすると、アクティブメンバーになることができます。</p>
@@ -78,7 +78,7 @@ image: /images/bgimages/bg002.jpg
 		<ul>
 			<li> Code for YOKOHAMAの公式Webサイトにメンバーとして名前を掲載することができます。</li>
 		</ul>
-
+		<hr>
 		<h3>コアメンバー</h3>
 		<p>コアメンバーは、Code for YOKOHAMAの運営に関与することができるメンバーです。
 			<br />アクティブメンバーの中から、以下のいずれかの方法で承認されると、コアメンバーとなります。</p>
@@ -93,7 +93,7 @@ image: /images/bgimages/bg002.jpg
 			<li>新規分科会及び新規プロジェクトを設置することができます</li>
 			<li>CxO: チーフ・{自分の得意なもの}・オフィサーを名乗ることができます（※任意）</li>
 		</ul>
-
+		<hr>
 		<h3>用語定義</h3>
 		<p>分科会：特定のテーマに沿ってディスカッションする集まり
 			<br />プロジェクト：メンバーによる提案で立ち上げたり、外部からの依頼を受けてスタートする形で、具体的に手を動かして進めるプロジェクト
