aboutページのテキスト調整

--- a/about.html
+++ b/about.html
@@ -88,6 +88,7 @@ image: /images/bgimages/bg002.jpg
 		</ol>
 		<p>毎年度初回のコアメンバーMTGで継続の意思を確認します。</p>
 		<h4>特典</h4>
+		<p>アクティブメンバーの特典に加え、以下の特典があります。</p>
 		<ul>
 			<li>コアメンバーMTG（C4Yの運営の意思決定の場）に参加することができます</li>
 			<li>新規分科会及び新規プロジェクトを設置することができます</li>
