アバウトページに分科会の紹介を載せた

--- a/about.html
+++ b/about.html
@@ -28,6 +28,20 @@ image: /images/bgimages/bg002.jpg
 			</p>
 		</div>
 
+		<h2 style="margin-top:2em;">分科会やプロジェクト</h2>
+		<div class="about_contents">
+			<p>メンバーは興味のある分科会やプロジェクトに参加することができます。分科会やプロジェクトごとに、全体ミーティングとは別に不定期でミーティングが開かれていますの。まずは、それぞれの専用のSlackチャネルに参加してみましょう。</p>
+			<h3>主な分科会</h3>
+			<h4>アーバンマネージメント</h4>
+			<p>横浜市に対するICTに関する政策提言のとりまとめのほか、データやIT技術を活かしたアーバンマネージメントについて研究、実践しています。</p>
+			<h4>マイクロ・アナリシス</h4>
+			<p>地域のデータ分析を実践しています。現在は、横浜市とも協力しながら公立小中学校の統廃合後の利活用法をテーマとした具体的検討を進めています。</p>
+			<h4>テック勉強会</h4>
+			<p>話題の技術や、メンバーが興味を持っている技術など自由に題材を決めて、メンバー以外に対してもオープンな勉強会として実施しています。</p>
+			<h4>XR研究会</h4>
+			<p>横浜市新市庁舎のVR化、みなとみらいのVR化プロジェクトを実施しました。3DやVRを用いたデータの可視化や分析にも挑戦します。</p>
+		</div>
+
 		<h2 style="margin-top:2em;">初めて参加される方へ</h2>
 		<div>
 			<h3>Slackに参加しよう！</h3>
