団体紹介スライドの埋め込み

--- a/about.html
+++ b/about.html
@@ -28,19 +28,24 @@ image: /images/bgimages/bg002.jpg
 			</p>
 		</div>
 
-		<h2 style="margin-top:2em;">分科会やプロジェクト</h2>
+		<h2 style="margin-top:2em;">分科会・プロジェクト</h2>
 		<div class="about_contents">
-			<p>メンバーは興味のある分科会やプロジェクトに参加することができます。分科会やプロジェクトごとに、全体ミーティングとは別に不定期でミーティングが開かれていますの。まずは、それぞれの専用のSlackチャネルに参加してみましょう。</p>
+			<p>Code for YOKOHAMAでは、特定のテーマについてディスカッションするための「分科会」や、実際に手を動かして進める「プロジェクト」という形で、外部の組織とも連携しながらさまざまな活動を行っています。
+				<br/>定例会とは別に、分科会やプロジェクトごとに不定期でミーティングが開かれています。Code for YOKOHAMAの専用Slackチャンネルからご参加頂くことができます。</p>
 			<h3>主な分科会</h3>
 			<h4>アーバンマネージメント</h4>
 			<p>横浜市に対するICTに関する政策提言のとりまとめのほか、データやIT技術を活かしたアーバンマネージメントについて研究、実践しています。</p>
 			<h4>マイクロ・アナリシス</h4>
 			<p>地域のデータ分析を実践しています。現在は、横浜市とも協力しながら公立小中学校の統廃合後の利活用法をテーマとした具体的検討を進めています。</p>
 			<h4>テック勉強会</h4>
-			<p>話題の技術や、メンバーが興味を持っている技術など自由に題材を決めて、メンバー以外に対してもオープンな勉強会として実施しています。</p>
+			<p>話題の技術や、メンバーが興味を持っている技術など自由に題材を決めて、どなたでもご参加頂けるオープンな勉強会として実施しています。</p>
 			<h4>XR研究会</h4>
 			<p>横浜市新市庁舎のVR化、みなとみらいのVR化プロジェクトを実施しました。3DやVRを用いたデータの可視化や分析にも挑戦します。</p>
 		</div>
+
+		
+		<!-- Speaker Deckのスライド埋め込み https://speakerdeck.com/c4yokohama -->
+		<script async class="speakerdeck-embed" data-id="c51fe738fb844b2aa1c03c8f2a37869c" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
 
 		<h2 style="margin-top:2em;">初めて参加される方へ</h2>
 		<div>
