Aboutページの文言の修正

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ image: /images/bgimages/bg002.jpg
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<h1 class="editable">C4Y is OPEN!</h1>
-			<p class="subtext editable">We have an extremely talented team.</p>
+			<p class="subtext editable">さまざまな専門分野を持った仲間と一緒に活動しませんか？</p>
 		</div>
 	</div>
 </section>
@@ -73,7 +73,7 @@ image: /images/bgimages/bg002.jpg
 		<h2 style="margin-top:2em;">参加のステップ</h2>
 		<p>Code for YOKOHAMAではさまざまな参加のスタイルを用意しています。
 			<br />気が向いた時にイベントのみ参加することもできますし、興味のある分科会・プロジェクトや運営に深く関わることもできます。
-			<br />メンバー同士の円滑なコミュニケーションと活動しやすい場づくりのために、以下のメンバー区分を設けています
+			<br />メンバー同士の円滑なコミュニケーションと活動しやすい場づくりのために、以下の3つのメンバー区分を設けています
 		</p>
 
 		<hr>
