--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ bottom_image: /images/bgimages/bg003.jpg
 			</div>
 			<h1 class="editable">Technology for Social Innovation</h1>
 			<p class="subtext editable">Code for YOKOHAMAは仲間とともに技術を磨き、学んだスキルを地域の課題解決に役立てていく活動です。横浜から価値あるソリューションを世界へ。あなたもこの活動に参加しませんか？</p>
-			<div class="cta button alt"><a href="./about/">参加方法</a></div>
+			<div class="cta button alt"><a href="./about/">詳しく見る</a></div>
 		</div>
 	</div>
 </section>
