--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: Home
-description: The latest app to help you find new friends with common interests.
+title: Code for YOKOHAMA
+description: Technology for Social Innovation. Code for YOKOHAMAは仲間とともに技術を磨き、学んだスキルを地域の課題解決に役立てていく活動です。横浜から価値あるソリューションを世界へ。あなたもこの活動に参加しませんか？
 image: /images/bgimages/bg004.jpg
 bottom_image: /images/bgimages/bg003.jpg
 ---
