Fixed : OGP画像の設定が必要 #81

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@ map:
 image: /images/bgimages/bg004.jpg
 ---
 
-<section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
+<section class="hero" style="background-image: url({% if page.top_image %}{% include relative-src.html src=page.top_image %}{% else %}{% include relative-src.html src=page.image %}{% endif %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<h1 class="editable">Get in touch today</h1>
