--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@ description: We are working on the following projects.
 image: /images/bgimages/bg004.jpg
 ---
 
-<section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
+<section class="hero" style="background-image: url({% if page.top_image %}{% include relative-src.html src=page.top_image %}{% else %}{% include relative-src.html src=page.image %}{% endif %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<h1 class="editable">Projects</h1>
