--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 ---
 title: Home
 description: The latest app to help you find new friends with common interests.
-image: /images/bgimages/bg004.jpg
+image: /images/logo/main_logo.svg
+top_image: /images/bgimages/bg004.jpg
 bottom_image: /images/bgimages/bg003.jpg
 ---
 
-<section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
+<section class="hero" style="background-image: url({% if page.top_image %}{% include relative-src.html src=page.top_image %}{% else %}{% include relative-src.html src=page.image %}{% endif %})">
 	<div class="inner-hero text-container">
 		<div class="hero-text-container">
 			<div class="main_logo" style="text-align: center; margin-bottom:50px;">
