プロジェクト一覧へのリンクの修正

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@ image: /images/bgimages/bg002.jpg
 				<br />興味のある活動を見つけたら、ぜひ参加してみてください。
 				<br />新たなプロジェクトのご提案も歓迎いたします！
 			</p>
-			<div class="button" style="margin-bottom:4em;"><a href="{{Site.url}}/projects/">プロジェクト一覧</a></div>
+			<div class="button" style="margin-bottom:4em;"><a href="{{site.url}}/projects/">プロジェクト一覧</a></div>
 		</div>
 
 		<h2 style="margin-top:2em;">参加のステップ</h2>
