--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Code for YOKOHAMA
 description: Technology for Social Innovation. Code for YOKOHAMAは仲間とともに技術を磨き、学んだスキルを地域の課題解決に役立てていく活動です。横浜から価値あるソリューションを世界へ。あなたもこの活動に参加しませんか？
-image: /images/logo/main_logo.svg
+image: /images/default_ogp.png
 top_image: /images/bgimages/bg004.jpg
 bottom_image: /images/bgimages/bg003.jpg
 ---
