「無料写真素材のダウンロード」のURL修正

--- a/satoyama-garden/index.html
+++ b/satoyama-garden/index.html
@@ -213,7 +213,7 @@
 
             <div class="main-sec__btndl">
               <a href="https://www.youtube.com/channel/UCphyzWRJWpD0sQBUqNzw1kw/videos" target="_blank">無料映像素材のダウンロード</a>
-              <a href="https://openphoto.jp/c/satoyamagarden" target="_blank">無料写真素材のダウンロード</a>
+              <a href="https://openphoto.app/c/satoyamagarden" target="_blank">無料写真素材のダウンロード</a>
             </div>
 
             <p class="main-sec__txt01">※動画素材は各YouTube動画にダウンロードURLを記載してあります。</p>
